[gd_scene load_steps=7 format=3 uid="uid://dsrai2qw7g6sb"]

[ext_resource type="Script" path="res://scripts/screens/battle_screen.gd" id="1_m0yuu"]
[ext_resource type="PackedScene" uid="uid://dg3r32qr53ron" path="res://scenes/table.tscn" id="2_udycx"]
[ext_resource type="PackedScene" uid="uid://clp5io7nkgngh" path="res://scenes/tutorial.tscn" id="3_g6onw"]
[ext_resource type="PackedScene" uid="uid://byjdc0ucd0wx3" path="res://scenes/sidebar.tscn" id="4_j8tp3"]
[ext_resource type="Texture2D" uid="uid://drpsgwx20w5xp" path="res://assets/battle_sprites/boss.png" id="5_cx8l7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ag61o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_cx8l7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="BattleScreen" type="Node2D"]
script = ExtResource("1_m0yuu")
_num_turns_left = 10

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="SidebarBackground" type="ColorRect" parent="."]
offset_right = 501.0
offset_bottom = 1080.0
color = Color(0.258824, 0.0117647, 0.00784314, 1)

[node name="Sidebar" parent="." instance=ExtResource("4_j8tp3")]
position = Vector2(8, 0)

[node name="tutorial" parent="." node_paths=PackedStringArray("slides") instance=ExtResource("3_g6onw")]
visible = false
slides = [NodePath("Slide1"), NodePath("Slide2"), NodePath("Slide3"), NodePath("Slide4"), NodePath("Slide5"), NodePath("Slide6"), NodePath("Slide7"), NodePath("Slide8"), NodePath("Slide9"), NodePath("Slide10"), NodePath("Slide11"), NodePath("Slide12"), null]

[node name="Table" parent="." instance=ExtResource("2_udycx")]
mouse_filter = 1
metadata/_edit_lock_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 1080.0
offset_right = 40.0
offset_bottom = 1120.0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 90.0
offset_top = -240.0
offset_right = 430.0
offset_bottom = -200.0
grow_vertical = 0
theme_override_constants/separation = 75
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TitleScreenButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Return to Title Screen"

[node name="PlayCardsButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Play Cards
"

[node name="Boss" type="AnimatedSprite2D" parent="."]
position = Vector2(1185, 221)
scale = Vector2(1.25, 1.25)
sprite_frames = SubResource("SpriteFrames_ag61o")

[connection signal="pressed" from="Control/HBoxContainer/TitleScreenButton" to="." method="_on_title_screen_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/PlayCardsButton" to="." method="_on_play_cards_button_pressed"]
